# https---github.com-Swastidp-Legal-Eagle-App

./: .gitignore  README.md  legal_bert_rag.py  main.py  pyproject.toml
utils/: extractors.py  legal_processors.py  model_cache.py
